fix non-minsafe controller, glyphicon sample, npm scripts update, spa-server added

--- a/app/features/about/index.html
+++ b/app/features/about/index.html
@@ -2,6 +2,6 @@
   <h1>About</h1>
 
   <div class="page-body">
-    Many years ago there lived a <span class="man">man</span>.
+    Many years ago there lived a <span class="man">man <span class="glyphicon glyphicon-user"></span></span>.
   </div>
 </div>
